fix: modify width to 780px instead 720px to avoid overlap nav links on resizing

--- a/docs/.vitepress/theme/styles/layout.css
+++ b/docs/.vitepress/theme/styles/layout.css
@@ -241,7 +241,7 @@ form {
   top: 0;
 }
 
-@media screen and (min-width: 720px) {
+@media screen and (min-width: 780px) {
   .theme.no-sidebar aside {
     display: none;
   }
